fix overlapping of 'add tile' intro with other intros

--- a/app/assets/stylesheets/internal/tile_manager/tiles.css.scss
+++ b/app/assets/stylesheets/internal/tile_manager/tiles.css.scss
@@ -515,6 +515,7 @@ body.suggested_tiles-index {
 
 body.client_admin-tiles-index {
   .joyride-tip-guide.tile {
+    z-index: 98;
     .joyride-nub.bottom {
       &:before {
         content: " ";
